# evalimine

./: LICENSE  README-HISTORICAL.md  README.md
ivote-server/: .gitignore  Makefile  rules.mk
ivote-server/cgi/: Makefile  apache  cgilog.py  cgivalidator.py  hes-apache.conf  hes-cgi.py  hes-verify-vote-cgi.py  hts-apache.conf  hts-cgi.py  hts-verify-vote-cgi.py  mobid-cgi.py  sigvalidator.py
ivote-server/common/: Makefile  apply_changes.py  autocmd.py  check_bdocconf.py  check_consistency.py  check_inputlists.py  config_bdoc.py  config_common.py  config_hlr_input.py  config_hsm.py  config_hth.py  election.py  evcommon.py  evlog.py  evlogdata.py  evmessage.py  evote_init.sh  evreg.py  evstrings.in  evstrings.py  exception_msg.py  formatutil.py  hts_state.py  init_conf.py  inputlists.py  installer.py  ksum.py  makemessages.py  monitoring.py  protocol.py  purge.py  pycheckrc  pylintrc  question.py  regrights.py  replace_candidates.py  revocationlists.py  sessionid.py  show_config.py  show_config_files_history.py  (+5 more)
ivote-server/debian/: .gitignore  changelog  control  copyright  default  evote-common.dirs  evote-common.lintian  evote-common.postinst  evote-common.prerm  evote-hes.config  evote-hes.cron.d  evote-hes.dirs  evote-hes.lintian  evote-hes.postinst  evote-hes.postrm  evote-hes.prerm  evote-hes.templates  evote-hlr.dirs  evote-hlr.lintian  evote-hlr.postinst  evote-hlr.postrm  evote-hlr.prerm  evote-hts.config  evote-hts.cron.d  evote-hts.dirs  evote-hts.lintian  evote-hts.postinst  evote-hts.postrm  evote-hts.prerm  evote-hts.templates  evote-prepare.dirs  evote-prepare.lintian  evote-prepare.postinst  repo.py  rules
ivote-server/doc/sysadmin_guide/: .gitignore  Makefile  conf.py  index.rst  make.bat
ivote-server/doc/sysadmin_guide/_static/: custom.css
ivote-server/etc/: hes-apache.conf  hes-sudo  hes-syslog.conf  hts-apache.conf  hts-sudo  hts-syslog.conf  nobackup
ivote-server/evui/: Makefile  burner.py  evfiles.py  evote_backup_snapshot.sh  evote_ui.sh  evui.py  serviceutil.py  uiutil.py
ivote-server/hes/: DigiDocService_client.py  DigiDocService_types.py  birthday.py  hes.py  hesdisp.py  middisp.py  purge_sessions.py  vote_analyzer.py
ivote-server/hlr/: Makefile  README  base64.cpp  base64.h  count_lines.cpp  count_lines.h  cryptoki.h  hlr.py  p11.cpp  p11.h  pkcs11.h  pkcs11f.h  pkcs11t.h  progress_bar.cpp  progress_bar.h  sign_data.cpp  threaded_decrypt.cpp  threaded_decrypt.h
ivote-server/hts/: hts.py  htsall.py  htsalldisp.py  htsbase.py  htscommon.py  htsdisp.py  htsrevoke.py  htsstatus.py  load_rev_files.py  ocsp_checker.py  purge_otps.py
ivote-server/pybdoc/: Makeall  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
ivote-server/pybdoc/etc/: bdoc.conf
ivote-server/pybdoc/etc/ca/: ESTEID-SK 2007.crt  ESTEID-SK 2011.crt  TEST Juur-SK.crt
ivote-server/pybdoc/etc/certs/: EID-SK 2007.crt  EID-SK 2011.crt  TEST of EE Certification Centre Root CA.crt  TEST of EID-SK 2011.crt  TEST of ESTEID-SK 2011.crt  TEST of SK OCSP RESPONDER 2011.crt  TEST-SK.crt
ivote-server/pybdoc/etc/schema/: XAdES.xsd  XAdES111.xsd  XMLSchema.dtd  datatypes.dtd  xades-signatures.xsd  xmldsig-core-schema.xsd
ivote-server/pybdoc/m4/: ac_python_devel.m4  swig_python.m4
ivote-server/pybdoc/python/: Makefile.am  Makefile.in  bdocconfig.py  bdocpython.i  bdocpythonutils.py  bdoctesttool.py  bdoctool
ivote-server/pybdoc/src/: BDoc.cpp  BDoc.h  CallStack.cpp  CallStack.h  ChallengeVerifierImpl.cpp  ChallengeVerifierImpl.h  DateTime.cpp  DateTime.h  Makefile.am  Makefile.in  PyBDoc.cpp  PyBDoc.h  Signature.cpp  Signature.h  SignatureVerifierImpl.cpp  SignatureVerifierImpl.h  StackException.cpp  StackException.h  XMLHelper.cpp  XMLHelper.h  runtestutil.cc  testutil.cpp
ivote-server/pybdoc/src/crypto/: Digest.cpp  Digest.h  Makefile.am  Makefile.in  OCSP.cpp  OCSP.h  OpenSSLHelpers.h  X509Cert.cpp  X509Cert.h  X509CertStore.cpp  X509CertStore.h
ivote-server/pybdoc/src/xml/: Makefile.am  Makefile.in
